[package]
name = "polkadot-erasure-coding"
version = "0.8.8"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "polkadot-primitives", path = "../primitives" }
reed_solomon = { package = "reed-solomon-erasure", version = "4.0.2"}
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
trie = { package = "sp-trie", git = "https://github.com/paritytech/substrate", rev = "d735e4d0b5378c227f81a5127a1d4544de112fd8" }
derive_more = "0.15.0"
